sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: ')' expected but ',' found.
			if (plusPetitQue(getNombreValeurs(i)), getNombreValeurs(i+1)) {
                                                             ^AlgBubbleSort1:6: error: illegal start of simple expression
			if (plusPetitQue(getNombreValeurs(i)), getNombreValeurs(i+1)) {
                                                                                    ^